simple fix kykyeva

--- a/fourth/Vagrantfile
+++ b/fourth/Vagrantfile
@@ -72,6 +72,7 @@ Vagrant.configure("2") do |config|
             sed -i 's/VolGroup00/vg0/g' /etc/fstab
             sed -i 's/VolGroup00/vg0/g' /boot/grub2/grub.cfg
             vgrename VolGroup00 vg0 
+            sed -i 's/VolGroup00/vg0/g' /etc/sysconfig/grub
             sed -i '94i  insmod ext2' /boot/grub2/grub.cfg
             init 6
             SHELL
