--- a/nineth/Vagrantfile
+++ b/nineth/Vagrantfile
@@ -29,6 +29,7 @@ Vagrant.configure("2") do |config|
           yum install -y vim mc docker cron   
           systemctl start docker
           docker run -p 80:80 -d -it moraresearch/alpine_nginx0.3 /bin/sh
+          docker exec -i $(docker ps -q) nginx
   	  SHELL
 
       end
