--- a/seventh/Vagrantfile
+++ b/seventh/Vagrantfile
@@ -26,12 +26,17 @@ Vagrant.configure("2") do |config|
              s.inline = 'mkdir -p ~root/.ssh; cp ~vagrant/.ssh/auth* ~root/.ssh'
           end
  	      box.vm.provision "shell", inline: <<-SHELL
-          yum install -y vim mc apache2 curl epel-release wget rpm-build createrepo yum-utils rpmdevtools redhat-lsb-core gcc 
-          yum localinstall -y /vagrant/nginx-1.16.1-1.el7.ngx.x86_64.rpm
+          yum install -y vim mc curl epel-release wget rpm-build createrepo yum-utils rpmdevtools redhat-lsb-core gcc 
+          curl -O https://nginx.org/packages/centos/7/SRPMS/nginx-1.16.1-1.el7.ngx.src.rpm
+          rpm -i nginx-1.16.1-1.el7.ngx.src.rpm
+          sed -i 's/ --with-http_addition_module/ --with-http_addition_module --with-http_v2_module/' /root/rpmbuild/SPECS/nginx.spec
+          yum-builddep /root/rpmbuild/SPECS/nginx.spec -y
+          rpmbuild -bb /root/rpmbuild/SPECS/nginx.spec
+          yum localinstall -y /root/rpmbuild/RPMS/x86_64/nginx-1.16.1-1.el7.ngx.x86_64.rpm 
+          mkdir /usr/share/nginx/html/repo
           rm /etc/nginx/conf.d/default.conf
-          cp /vagrant/default.conf /etc/nginx/conf.d/default.conf
-          mkdir /usr/share/nginx/html/repo 
-          cp /vagrant/nginx-1.16.1-1.el7.ngx.x86_64.rpm /usr/share/nginx/html/repo
+          cp /vagrant/default.conf /etc/nginx/conf.d/default.conf               
+          cp /root/rpmbuild/RPMS/x86_64/nginx-1.16.1-1.el7.ngx.x86_64.rpm /usr/share/nginx/html/repo
           wget http://www.percona.com/downloads/percona-release/redhat/0.1-6/percona-release-0.1-6.noarch.rpm -O /usr/share/nginx/html/repo/percona-release-0.1-6.noarch.rpm
           createrepo /usr/share/nginx/html/repo
           systemctl start nginx 
