--- a/fifteen/Vagrantfile
+++ b/fifteen/Vagrantfile
@@ -6,7 +6,7 @@ MACHINES = {
         :box_name => "centos/7",
         #:public => {:ip => '10.10.10.1', :adapter => 1},
         :net => [
-                   {ip: '192.168.255.1', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
+                   {ip: '192.168.255.1', adapter: 2, netmask: "255.255.255.248", virtualbox__intnet: "router-net"},
                 ]
   },
   :centralRouter => {
@@ -91,6 +91,9 @@ Vagrant.configure("2") do |config|
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             sysctl net.ipv4.conf.all.forwarding=1
             iptables -t nat -A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
+            ip r add 192.168.0.0/24 dev eth1 via 192.168.255.2 
+            ip r add 192.168.2.0/24 dev eth1 via 192.168.255.3
+            ip r add 192.168.1.0/24 dev eth1 via 192.168.255.4
             SHELL
         when "centralRouter"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
@@ -98,11 +101,15 @@ Vagrant.configure("2") do |config|
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
             echo "GATEWAY=192.168.255.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
+            ip r add 192.168.2.0/24 dev eth1 via 192.168.255.3
+            ip r add 192.168.1.0/24 dev eth1 via 192.168.255.4
             SHELL
         when "centralServer"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
             echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            ip r del default
+            ip r add default dev eth1 via 192.168.255.4 
             systemctl restart network
             SHELL
         when "office1Router"
@@ -111,12 +118,16 @@ Vagrant.configure("2") do |config|
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
             echo "GATEWAY=192.168.255.2" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
+            ip r add 192.168.0.0/24 via 192.168.255.2
+            ip r add 192.168.1.0/24 via 192.168.255.4
             SHELL
         when "office2Router"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             sysctl net.ipv4.conf.all.forwarding=1
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
             echo "GATEWAY=192.168.255.2" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            ip r add 192.168.0.0/24 via 192.168.255.2
+            ip r add 192.168.2.0/24 via 192.168.255.3
             systemctl restart network
             SHELL
         when "office1Server"
@@ -125,6 +136,8 @@ Vagrant.configure("2") do |config|
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
             echo "GATEWAY=192.168.2.193" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
+            ip r del default 
+            ip r add default dev eth1 via 192.168.2.193
             SHELL
         when "office2Server"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
@@ -132,6 +145,7 @@ Vagrant.configure("2") do |config|
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
             echo "GATEWAY=192.168.1.193" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
+            ip r add default dev eth1 via 192.168.1.193
             SHELL
 
         end
