--- a/project/grok.conf
+++ b/project/grok.conf
@@ -6,7 +6,7 @@ input {
 
 filter {
    if [type] == "auth" {
-      grok {  match => { "message" => "%{MONTH} %{MONTHDAY} %{TIME} %{WORD:hostname} %{WORD:filename}: %{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" } }
+      grok {  match => { "message" => "%{MONTH} %{MONTHDAY} %{TIME} %{WORD:hostname} %{GREEDYDATA:service}: %{GREEDYDATA:syslog_message}" } }
       mutate { 
          add_field => { "[@metadata][log_type]" => "auth" }
       }
