--- a/project/Vagrantfile
+++ b/project/Vagrantfile
@@ -19,6 +19,10 @@ MACHINES = {
         :box_name => "centos/7",
         :ip_addr => '192.168.11.151',
   },
+  :bacula => {
+        :box_name => "centos/7",
+        :ip_addr => '192.168.11.152',
+  },
   :client => {
         :box_name => "centos/7",
         :ip_addr => '192.168.11.161',
@@ -62,34 +66,44 @@ Vagrant.configure("2") do |config|
           setenforce 0
           yum install dnf epel-release -y 
           dnf localinstall /vagrant/jre-8u241-linux-x64.rpm -y 
-          yum install vim elasticsearch -y
-          cat /vagrant/search1 > /etc/elasticsearch/elasticsearch.yml
-          systemctl enable elasticsearch
-          systemctl start elasticsearch  
+          yum install sudo python3 -y
+          groupadd sudo 
+          sudo su
+          useradd mora -G sudo -d /home/mora -s /bin/bash 
+          cat /vagrant/sudoers > /etc/sudoers
+          mkdir /home/mora/.ssh 
+          cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+          chown mora:mora -R /home/mora
           SHELL
       when "server2"
         box.vm.provision "shell", run: "always", inline: <<-SHELL
           cp /vagrant/elk.repo /etc/yum.repos.d/
           setenforce 0
           yum install dnf epel-release -y 
-          yum install nginx -y
           dnf localinstall /vagrant/jre-8u241-linux-x64.rpm -y 
-          yum install vim elasticsearch -y
-          cat /vagrant/search2 > /etc/elasticsearch/elasticsearch.yml
-          systemctl enable elasticsearch
-          systemctl start elasticsearch   
+          yum install sudo python3 -y
+          groupadd sudo 
+          sudo su
+          useradd mora -G sudo -d /home/mora -s /bin/bash 
+          cat /vagrant/sudoers > /etc/sudoers
+          mkdir /home/mora/.ssh 
+          cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+          chown mora:mora -R /home/mora
           SHELL
       when "server3"
         box.vm.provision "shell", run: "always", inline: <<-SHELL
           cp /vagrant/elk.repo /etc/yum.repos.d/
           setenforce 0
           yum install dnf epel-release -y 
-          yum install nginx -y
           dnf localinstall /vagrant/jre-8u241-linux-x64.rpm -y 
-          yum install vim elasticsearch -y
-          cat /vagrant/search3 > /etc/elasticsearch/elasticsearch.yml
-          systemctl enable elasticsearch
-          systemctl start elasticsearch   
+          yum install sudo python3 -y
+          groupadd sudo 
+          sudo su
+          useradd mora -G sudo -d /home/mora -s /bin/bash 
+          cat /vagrant/sudoers > /etc/sudoers
+          mkdir /home/mora/.ssh 
+          cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+          chown mora:mora -R /home/mora
           SHELL
       when "proxy"
         box.vm.provision "shell", run: "always", inline: <<-SHELL
@@ -97,21 +111,61 @@ Vagrant.configure("2") do |config|
           cp /vagrant/elk.repo /etc/yum.repos.d/
           setenforce 0
           dnf localinstall /vagrant/jre-8u241-linux-x64.rpm -y 
-          yum install vim nginx kibana logstash -y
-          cp /vagrant/grok.conf /etc/logstash/conf.d
-          cat /vagrant/nginx.conf > /etc/nginx/nginx.conf
-          cat /vagrant/kibana.yml > /etc/kibana/kibana.yml
-          systemctl enable kibana nginx logstash 
-          systemctl start kibana nginx logstash 
+          yum install sudo python3 -y
+          groupadd sudo 
+          sudo su
+          useradd mora -G sudo -d /home/mora -s /bin/bash 
+          cat /vagrant/sudoers > /etc/sudoers
+          mkdir /home/mora/.ssh 
+          cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+          chown mora:mora -R /home/mora
+          SHELL
+      when "bacula"
+        box.vm.provision "shell", run: "always", inline: <<-SHELL
+          cp /vagrant/elk.repo /etc/yum.repos.d/
+          setenforce 0
+          yum install dnf epel-release -y
+          yum install sudo python3 -y
+          groupadd sudo 
+          sudo su
+          useradd mora -G sudo -d /home/mora -s /bin/bash 
+          cat /vagrant/sudoers > /etc/sudoers
+          mkdir /home/mora/.ssh 
+          cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+          chown mora:mora -R /home/mora
+        yum install -y vim mc bacula-director bacula-storage bacula-console mariadb-server
+        systemctl start mariadb  
+        setenforce 0 
+        /usr/libexec/bacula/grant_mysql_privileges
+        /usr/libexec/bacula/create_mysql_database -u root
+        /usr/libexec/bacula/make_mysql_tables -u bacula 
+        mysql -e "grant all on bacula.* to bacula@'localhost' identified by 'password';"
+        echo "1
+" | alternatives --config libbaccats.so 
+        cat /vagrant/dir > /etc/bacula/bacula-dir.conf 
+        cat /vagrant/sd > /etc/bacula/bacula-sd.conf
+        cat /vagrant/bconsole > /etc/bacula/bconsole.conf 
+        mkdir /backup 
+        mkdir /var/lib/bacula 
+        chown bacula:bacula -R /backup 
+        chown bacula:bacula -R /var/lib/bacula 
+        systemctl start bacula-dir bacula-sd
+        echo "label pool=mainpool
+one
+exit" | bconsole  
           SHELL
       when "client"
         box.vm.provision "shell", run: "always", inline: <<-SHELL
           yum install epel-release -y
           cp /vagrant/elk.repo /etc/yum.repos.d/
-          yum install filebeat -y
-          cat /vagrant/filebeat.yml > /etc/filebeat/filebeat.yml 
-          systemctl enable filebeat
-          systemctl start filebeat   
+          yum install sudo python3 -y
+          groupadd sudo 
+          sudo su
+          useradd mora -G sudo -d /home/mora -s /bin/bash 
+          cat /vagrant/sudoers > /etc/sudoers
+          mkdir /home/mora/.ssh 
+          cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+          chown mora:mora -R /home/mora
         SHELL
       end
 
