--- a/sixteen/Vagrantfile
+++ b/sixteen/Vagrantfile
@@ -1,57 +1,18 @@
 # -*- mode: ruby -*-
-# vim: set ft=ruby :
-home = ENV['HOME']
+# vi: set ft=ruby :
 
-MACHINES = {
-  :client => {
-        :box_name => "centos/7",
-        :ip_addr => '192.168.11.150',
-  },
-  :server => {
-        :box_name => "centos/7",
-        :ip_addr => '192.168.11.151',
-  }
-}
-
-Vagrant.configure("2") do |config|
-
-  MACHINES.each do |boxname, boxconfig|
-
-      config.vm.define boxname do |box|
-
-          box.vm.box = boxconfig[:box_name]
-          box.vm.host_name = boxname.to_s
-
-          #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
-
-          box.vm.network "private_network", ip: boxconfig[:ip_addr]
-
-          box.vm.provider :virtualbox do |vb|
-          vb.customize ["modifyvm", :id, "--memory", "256"]
-        #   vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
-          vb.name = boxname.to_s
-
-        #   boxconfig[:disks].each do |dname, dconf|
-        #       unless File.exist?(dconf[:dfile])
-        #         vb.customize ['createhd', '--filename', dconf[:dfile], '--variant', 'Fixed', '--size', dconf[:size]]
-        #       end
-        #       vb.customize ['storageattach', :id,  '--storagectl', 'SATA', '--port', dconf[:port], '--device', 0, '--type', 'hdd', '--medium', dconf[:dfile]]
-        # end
-          end
-      box.vm.provision "shell", inline: <<-SHELL
-          mkdir -p ~root/.ssh
-          cp ~vagrant/.ssh/auth* ~root/.ssh
-      SHELL
-
-      case boxname.to_s
-      when "server"
-        box.vm.provision "shell", run: "always", inline: <<-SHELL
-          SHELL
-      when "client"
-        box.vm.provision "shell", run: "always", inline: <<-SHELL
-        SHELL
-      end
-
-      end
-   end
-end
+Vagrant.configure(2) do |config|
+  config.vm.box = "centos/7"
+  config.vm.define "server" do |server|
+    server.vm.hostname = "server"
+    server.vm.network "private_network", ip: "192.168.11.101"
+    server.vm.provision "shell", run: "always", inline: <<-SHELL
+    SHELL
+  end
+  config.vm.define "client" do |client|
+    client.vm.hostname = "client"
+    client.vm.network "private_network", ip: "192.168.11.102"
+    client.vm.provision "shell", run: "always", inline: <<-SHELL
+    SHELL
+ end
+end 
