--- a/twentyeight/Vagrantfile
+++ b/twentyeight/Vagrantfile
@@ -84,4 +84,12 @@ Vagrant.configure(2) do |config|
           systemctl start haproxy 
     SHELL
  end
+  config.vm.define "ansible" do |ansible|
+    ansible.vm.hostname = "ansible"
+    ansible.vm.network "private_network", ip: "192.168.11.111"
+    ansible.vm.provision "shell", run: "always", inline: <<-SHELL
+          yum install epel-release -y
+          yum install ansible python3 -y
+        SHELL
+ end
 end
