--- a/sixteen/Vagrantfile
+++ b/sixteen/Vagrantfile
@@ -1,18 +1,56 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
+MACHINES = {
+  :otuslinux => {
+        :box_name => "centos/7",
+        :ip_addr => '192.168.11.101'
+  },
+  :client => {
+        :box_name => "centos/7",
+        :ip_addr => '192.168.11.102'
+  }
+}
 
-Vagrant.configure(2) do |config|
-  config.vm.box = "centos/7"
-  config.vm.define "server" do |server|
-    server.vm.hostname = "server"
-    server.vm.network "private_network", ip: "192.168.11.101"
-    server.vm.provision "shell", run: "always", inline: <<-SHELL
-    SHELL
+Vagrant.configure("2") do |config|
+
+  MACHINES.each do |boxname, boxconfig|
+
+      config.vm.define boxname do |box|
+
+          box.vm.box = boxconfig[:box_name]
+          box.vm.host_name = boxname.to_s
+
+          #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
+
+          box.vm.network "private_network", ip: boxconfig[:ip_addr]
+
+          box.vm.provider :virtualbox do |vb|
+            vb.customize ["modifyvm", :id, "--memory", "4096"]
+            vb.customize ["modifyvm", :id, "--cpus", "3"]
+          end
+
+          box.vm.provision :shell do |s|
+             s.inline = 'mkdir -p ~root/.ssh; cp ~vagrant/.ssh/auth* ~root/.ssh'
+          end
+          case boxname.to_s
+          when "otuslinux"
+ 	      box.vm.provision "shell", inline: <<-SHELL
+            yum install -y  epel-release
+  	        SHELL
+          when "client"
+            box.vm.provision "shell", run: "always", inline: <<-SHELL
+            yum install epel-release -y
+            yum install sudo python3 -y
+            groupadd sudo 
+            sudo su
+            useradd mora -G sudo -d /home/mora -s /bin/bash 
+            cat /vagrant/sudoers > /etc/sudoers
+            mkdir /home/mora/.ssh
+            usermod -aG sudo vagrant  
+            cp /vagrant/id_rsa.pub /home/mora/.ssh/authorized_keys
+            chown mora:mora -R /home/mora
+
+            SHELL
+          end 
+
+      end
   end
-  config.vm.define "client" do |client|
-    client.vm.hostname = "client"
-    client.vm.network "private_network", ip: "192.168.11.102"
-    client.vm.provision "shell", run: "always", inline: <<-SHELL
-    SHELL
- end
-end 
+end
